# Particles

./: .gitignore  CMakeLists.txt  about.md  readme.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/particles/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: privacy_policy.txt
app/src/main/assets/shaders/: particle.comp  particle.frag  particle.vert  text.frag  text.vert
app/src/main/cpp/: CMakeLists.txt  DebugUtils.cpp  DebugUtils.h  ParticleSystem.cpp  ParticleSystem.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  TextureAsset.cpp  Utility.cpp  Utility.h  main.cpp
app/src/main/java/com/example/particles/: MainActivity.kt
app/src/main/java/dev/oasdflkjo/particles/: MainActivity.kt
app/src/main/res/drawable/: dialog_background.xml  xray_view.xml
app/src/main/res/layout/: privacy_dialog.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
